--- a/overlay/frameworks/base/core/res/res/xml/power_profile.xml
+++ b/overlay/frameworks/base/core/res/res/xml/power_profile.xml
@@ -39,7 +39,7 @@
 
     <!-- Different CPU speeds as reported in
          /sys/devices/system/cpu/cpu0/cpufreq/scaling_available_frequencies -->
-    <array name="cpu.speeds.cluster0">
+    <array name="cpu.core_speeds.cluster0">
         <value>307200</value> <!-- 307 MHz CPU speed -->
         <value>422400</value> <!-- 422 MHz CPU speed -->
         <value>480000</value> <!-- 480 MHz CPU speed -->
@@ -59,7 +59,7 @@
     </array>
     <!-- Different CPU speeds as reported in
          /sys/devices/system/cpu/cpu2/cpufreq/scaling_available_frequencies -->
-    <array name="cpu.speeds.cluster1">
+    <array name="cpu.core_speeds.cluster1">
         <value>307200</value> <!-- 307 MHz CPU speed -->
         <value>403200</value> <!-- 403 MHz CPU speed -->
         <value>480000</value> <!-- 480 MHz CPU speed -->
@@ -88,7 +88,7 @@
     </array>
     <!-- Additional power used by a CPU from cluster 0 when running at different
          speeds. Currently this measurement also includes cluster cost. -->
-    <array name="cpu.active.cluster0">
+    <array name="cpu.core_power.cluster0">
         <value>50</value> <!-- 307 MHz CPU speed -->
         <value>75</value> <!-- 422 MHz CPU speed -->
         <value>56</value> <!-- 480 MHz CPU speed -->
@@ -108,7 +108,7 @@
     </array>
     <!-- Additional power used by a CPU from cluster 1 when running at different
          speeds. Currently this measurement also includes cluster cost. -->
-    <array name="cpu.active.cluster1">
+    <array name="cpu.core_power.cluster1">
         <value>55</value> <!-- 307 MHz CPU speed -->
         <value>60</value> <!-- 403 MHz CPU speed -->
         <value>65</value> <!-- 480 MHz CPU speed -->
